--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -17,7 +17,7 @@ spec:
           image: ninepiece2/human-face-generator:v0.5.0
           resources:
             limits:
-              memory: "4Gi"
+              memory: "3500Mi"
           ports:
             - containerPort: 8443
           imagePullPolicy: Always
