--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -18,6 +18,7 @@ spec:
           resources:
             limits:
               memory: "3500Mi"
+              cpu: "2000m"
           ports:
             - containerPort: 8443
           imagePullPolicy: Always
